# minecraft-auth

./: .gitignore  Cargo.toml  Licence  README.md  flake.nix  renovate.json
.devenv/: profile
.direnv/: flake-profile-1-link
.github/: pull_request_template.md
.github/ISSUE_TEMPLATES/: bug_report.yml  custom.yml  feature_request.yml
.github/workflows/: rust_test.yml
src/: lib.rs  oauth.rs
src/oauth/: mod.rs  server.rs
