[package]
name = "minecraft-auth"
version = "0.0.1"
authors = ["Eveeifyeve <eveeg1971@gmail.com>"]
edition = "2021"
description = "A Minecraft authentication package made in rust."
readme = "README.md"
keywords = ["minecraft", "authentication"]
categories = ["authentication"]
license = "./Licence"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
actix-rt = "2.9.0"
actix-web = "4.4.1"
open = "5.0.1"
rand = "0.8.5"
reqwest = "0.11.23"
serde = { version = "1.0.194", features = ["derive"] }
serde_json = "1.0.110"
tokio = { version = "1.35.1", features = ["full"] }
